# hvconnect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: addingnewfields.txt  eng_notes.txt
docroot/: HydrovoltsConnect.xml  memrun.sh  run.sh  test.csv  wt_config.xml
src/: CMakeLists.txt  HVDatabaseUpdatedResource.cpp  HVDatabaseUpdatedResource.h  HydrovoltsConnect.cpp  HydrovoltsConnectApp.cpp  HydrovoltsConnectApp.h  HydrovoltsConnectChartToolbar.cpp  HydrovoltsConnectChartToolbar.h  HydrovoltsConnectChartView.cpp  HydrovoltsConnectChartView.h  HydrovoltsConnectMainWnd.cpp  HydrovoltsConnectMainWnd.h  HydrovoltsConnectModel.cpp  HydrovoltsConnectModel.h  HydrovoltsConnectOpHistory.h  HydrovoltsConnectProject.h  HydrovoltsConnectProjects.cpp  HydrovoltsConnectProjects.h  HydrovoltsConnectProjectsTab.cpp  HydrovoltsConnectProjectsTab.h  HydrovoltsConnectRestApi.cpp  HydrovoltsConnectRestApi.h  HydrovoltsConnectTableView.cpp  HydrovoltsConnectTableView.h  HydrovoltsConnectTabs.cpp  HydrovoltsConnectTabs.h  HydrovoltsConnectWidget.cpp  HydrovoltsConnectWidget.h  HydrovoltsConnectWidgetToolbar.cpp  HydrovoltsConnectWidgetToolbar.h  WCSVFileResource.cpp  WCSVFileResource.h
